# Banana

AutoLabelImages/: AutoLabel  Makefile  README.md  rundemo.sh
AutoLabelImages/cfg/: coco_edited.data  myawesomecfg.data  voc2.data  yolov2.cfg
AutoLabelImages/data/: myawesomenames.names  voc2.names
AutoLabelImages/examples/: coco.c  detector.c  yolo.c
AutoLabelImages/include/: darknet.h
AutoLabelImages/src/: .image.c.swp  demo.c  demo_backup.c  image.c  image.h
Code/.ipynb_checkpoints/: Chapter1-checkpoint.ipynb
Code/Python/: Chapter1.ipynb  matchFile.py  somefile.txt
Code/Python/.ipynb_checkpoints/: Chapter1-checkpoint.ipynb
Code/face_liveness_detection_Class_version-master-1b87b02be173070ef17da5125f591988821109f7/: FaceLivenessDetect.cpp  FaceLivenessDetect.h  README.md  example.cpp
Journal/: .Daily.txt.swp  Daily.txt
Record/: .record.cpp.swp  CMakeLists.txt  record.cpp
encryption/: CMakeLists.txt  README.md  SV7.1_448.model  SV7.2_320.model  SV7_320.model  SV7_448.model  food.cfg  main  main.cpp
labelImg/libs/: pascal_voc_io.py
script/: clear_data.bash  cutvideos.bash  generate.py  honglong2txt.py  install_opencv_ubuntu16.sh  modifynm.py  pick1k.py  processImageDataFromShuJuTang.py  rename.bash  runpy.bash  select.py  按txt匹配jpg.bash
script/extract_jpg_from_bag/: baglist.txt  export.launch  extract_jpg_from_bag.bash
